# idevice

./: .gitignore  .gitmodules  AI.md  Cargo.toml  LICENSE.txt  README.md  build_idevice_ffi_xcframework.py  justfile
cpp/: .clang-format  .clangd  CMakeLists.txt  vs_build_rust.bat  xcode_build_rust.sh
cpp/examples/: CMakeLists.txt  afc.cpp  app_service.cpp  debug_proxy.cpp  diagnosticsservice.cpp  dvt_demo.cpp  heartbeat.cpp  idevice_id.cpp  ideviceinfo.cpp  installation_proxy.cpp  location_simulation.cpp  lockdown_location_simulation.cpp  mobileactivationd.cpp  mobilebackup2.cpp  mounter.cpp  notification_proxy.cpp  pair_host.cpp  restore.cpp  screenshot.cpp  screenshotr.cpp  springboardservices.cpp  syslog_relay.cpp  tunnel_app_service.cpp
cpp/idevice++.xcodeproj/: project.pbxproj
cpp/include/: ffi.hpp  idevice++.hpp  pairing_file.hpp  usbmuxd.hpp
cpp/include/idevice++/: adapter_stream.hpp  afc.hpp  amfi.hpp  app_service.hpp  bindings.hpp  bt_packet_logger.hpp  companion_proxy.hpp  core_device_proxy.hpp  crashreportcopymobile.hpp  debug_proxy.hpp  diagnostics_relay.hpp  diagnosticsservice.hpp  ffi.hpp  heartbeat.hpp  house_arrest.hpp  idevice.hpp  installation_proxy.hpp  installcoordination_proxy.hpp  location_simulation.hpp  lockdown.hpp  misagent.hpp  mobile_image_mounter.hpp  mobileactivationd.hpp  mobilebackup2.hpp  notification_proxy.hpp  option.hpp  os_trace_relay.hpp  pairable_host.hpp  pairing_file.hpp  pcapd.hpp  preboard_service.hpp  process_control.hpp  provider.hpp  readwrite.hpp  remote_server.hpp  restore.hpp  restore_service.hpp  result.hpp  rp_pairing_file.hpp  rsd.hpp  (+6 more)
cpp/sln/: idevice++.sln  idevice++.vcxproj  idevice++.vcxproj.filters
cpp/src/: adapter_stream.cpp  afc.cpp  amfi.cpp  app_service.cpp  bt_packet_logger.cpp  companion_proxy.cpp  core_device.cpp  crashreportcopymobile.cpp  debug_proxy.cpp  diagnostics_relay.cpp  diagnosticsservice.cpp  ffi.cpp  heartbeat.cpp  house_arrest.cpp  idevice.cpp  installation_proxy.cpp  installcoordination_proxy.cpp  location_simulation.cpp  lockdown.cpp  misagent.cpp  mobile_image_mounter.cpp  mobileactivationd.cpp  mobilebackup2.cpp  notification_proxy.cpp  os_trace_relay.cpp  pairable_host.cpp  pairing_file.cpp  pcapd.cpp  preboard_service.cpp  process_control.cpp  provider.cpp  remote_server.cpp  restore.cpp  restore_service.cpp  rp_pairing_file.cpp  rsd.cpp  screenshotr.cpp  springboardservices.cpp  syslog_relay.cpp  tcp_callback_feeder.cpp  (+2 more)
cpp/src/dvt/: application_listing.cpp  condition_inducer.cpp  device_info.cpp  energy_monitor.cpp  graphics.cpp  location_simulation.cpp  network_monitor.cpp  notifications.cpp  process_control.cpp  remote_server.cpp  screenshot.cpp  sysmontap.cpp
ffi/: Cargo.toml  README.md  build.rs  idevice.hpp  plist.h
ffi/examples/: CMakeLists.txt  afc.c  connect.c  debug_proxy.c  enable_jit.c  heartbeat.c  ipa_installer.c  list_apps.c  location_simulation.c  lockdownd.c  mount_personalized.c  mounter.c  process_control.c  remotexpc.c
ffi/src/: adapter.rs  afc.rs  amfi.rs  bt_packet_logger.rs  companion_proxy.rs  core_device_proxy.rs  crashreportcopymobile.rs  debug_proxy.rs  diagnostics_relay.rs  errors.rs  heartbeat.rs  house_arrest.rs  installation_proxy.rs  installcoordination_proxy.rs  lib.rs  location_simulation.rs  lockdown.rs  lockdownd.rs  logging.rs  misagent.rs  mobile_image_mounter.rs  mobileactivationd.rs  mobilebackup2.rs  mounter.rs  notification_proxy.rs  os_trace_relay.rs  pairable_host.rs  pairing_file.rs  pcapd.rs  preboard_service.rs  process_control.rs  provider.rs  remote_server.rs  remotexpc.rs  restore.rs  restore_service.rs  rp_pairing_file.rs  rsd.rs  sbservices.rs  screenshotr.rs  (+6 more)
ffi/src/core_device/: app_service.rs  diagnosticsservice.rs  mod.rs
ffi/src/dvt/: application_listing.rs  condition_inducer.rs  device_info.rs  location_simulation.rs  mod.rs  network_monitor.rs  process_control.rs  remote_server.rs  screenshot.rs  sysmontap.rs
idevice/: Cargo.toml
idevice/src/: amfi.rs  ca.rs  core_device_proxy.rs  cursor.rs  debug_proxy.rs  heartbeat.rs  http.rs  installation_proxy.rs  lib.rs  lockdown.rs  lockdownd.rs  mdns.rs  misagent.rs  mobile_image_mounter.rs  mounter.rs  obfuscation.rs  pairing_file.rs  plist_macro.rs  provider.rs  sni.rs  springboardservices.rs  tss.rs  tunnel.rs  tunneld.rs  util.rs
idevice/src/afc/: errors.rs  file.rs  mod.rs  opcode.rs
idevice/src/core_device_proxy/: device.rs  interface.rs  mod.rs
idevice/src/dvt/: location_simulation.rs  message.rs  message_aux.rs  mod.rs  process_control.rs  remote_server.rs
idevice/src/http2/: error.rs  mod.rs  padded.rs
idevice/src/remote_pairing/: errors.rs  mod.rs  opack.rs  peer_device.rs  responder.rs  rp_pairing_file.rs  socket.rs  tls_psk.rs  tlv.rs  tunnel.rs
idevice/src/sbservices/: mod.rs
idevice/src/services/: amfi.rs  bt_packet_logger.rs  companion_proxy.rs  core_device_proxy.rs  crashreportcopymobile.rs  debug_proxy.rs  diagnostics_relay.rs  heartbeat.rs  house_arrest.rs  installation_proxy.rs  installcoordination_proxy.rs  lockdown.rs  misagent.rs  mobile_image_mounter.rs  mobileactivationd.rs  mobilebackup2.rs  mod.rs  notification_proxy.rs  os_trace_relay.rs  pcapd.rs  preboard_service.rs  restore_service.rs  rsd.rs  screenshot.rs  screenshotr.rs  simulate_location.rs  springboardservices.rs  syslog_relay.rs  wda.rs  (+1 more)
tools/: Cargo.toml
tools/src/: activation.rs  afc.rs  amfi.rs  app_service.rs  application_listing.rs  bt_packet_logger.rs  common.rs  companion_proxy.rs  condition_inducer.rs  core_device_proxy_tun.rs  coredevice_location.rs  coredevice_pasteboard.rs  coredevice_rotate.rs  coredevice_stream.rs  crash_logs.rs  debug_proxy.rs  device_info.rs  diagnostics.rs  diagnosticsservice.rs  dvt_packet_parser.rs  em_proxy.rs  energy_monitor.rs  graphics.rs  heartbeat_client.rs  hid.rs  idevice_id.rs  ideviceinfo.rs  ideviceinstaller.rs  installcoordination_proxy.rs  instproxy.rs  iproxy.rs  location_simulation.rs  lockdown.rs  main.rs  misagent.rs  mobilebackup2.rs  mounter.rs  network_monitor.rs  notification_proxy_client.rs  notifications.rs  (+25 more)
(+160 files in other folders)
