[package]
name = "idevice"
description = "A Rust library to interact with services on iOS devices."
authors = ["Jackson Coxson"]
version = "0.1.1"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/idevice"
repository = "https://github.com/jkcoxson/idevice"
keywords = ["lockdownd", "ios"]

[[bin]]
name = "ideviceinfo"
path = "src/tools/ideviceinfo.rs"

[[bin]]
name = "heartbeat_client"
path = "src/tools/heartbeat_client.rs"

[[bin]]
name = "instproxy"
path = "src/tools/instproxy.rs"

[dependencies]
plist = { version = "1.7" }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "2" }
log = { version = "0.4" }
env_logger = { version = "0.11" }
openssl = { version = "0.10" }
