[package]
name = "idevice"
description = "A Rust library to interact with services on iOS devices."
authors = ["Jackson Coxson"]
version = "0.1.5"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/idevice"
repository = "https://github.com/jkcoxson/idevice"
keywords = ["lockdownd", "ios"]

[[bin]]
name = "ideviceinfo"
path = "src/tools/ideviceinfo.rs"

[[bin]]
name = "heartbeat_client"
path = "src/tools/heartbeat_client.rs"

[[bin]]
name = "instproxy"
path = "src/tools/instproxy.rs"

[[bin]]
name = "mounter"
path = "src/tools/mounter.rs"
required-features = ["sha2", "ureq"]

[dependencies]
plist = { version = "1.7" }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "2" }
log = { version = "0.4" }
env_logger = { version = "0.11" }
openssl = { version = "0.10" }

# Binary dependencies
sha2 = { version = "0.10", optional = true }
ureq = { version = "2.12", optional = true }

[features]
std-tcp = []
