[package]
name = "idevice"
description = "A Rust library to interact with services on iOS devices."
authors = ["Jackson Coxson"]
version = "0.1.8"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/idevice"
repository = "https://github.com/jkcoxson/idevice"
keywords = ["lockdownd", "ios"]

[[bin]]
name = "ideviceinfo"
path = "src/tools/ideviceinfo.rs"
required-features = ["bin"]

[[bin]]
name = "heartbeat_client"
path = "src/tools/heartbeat_client.rs"

[[bin]]
name = "instproxy"
path = "src/tools/instproxy.rs"

[[bin]]
name = "mounter"
path = "src/tools/mounter.rs"
required-features = ["sha2", "ureq"]

[dependencies]
tokio = { version = "1.43", features = ["io-util", "macros", "time", "full"] }
tokio-openssl = { version = "0.6" }
plist = { version = "1.7" }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "2" }
log = { version = "0.4" }
env_logger = { version = "0.11" }
openssl = { version = "0.10" }
json = { version = "0.12" }
indexmap = { version = "2.7", features = ["serde"] }
uuid = { version = "1.12", features = ["serde"] }
async-recursion = { version = "1.1" }
base64 = { version = "0.22" }

# Binary dependencies
sha2 = { version = "0.10", optional = true }
ureq = { version = "2.12", optional = true }

[features]
bin = ["tokio/full", "sha2", "ureq"]
