[package]
name = "idevice-ffi"
version = "0.1.0"
edition = "2024"


[dependencies]
idevice = { path = "../idevice", default-features = false }
futures = { version = "0.3", optional = true }
log = "0.4.26"
simplelog = "0.12.2"
once_cell = "1.21.1"
tokio = { version = "1.44.1", features = ["full"] }
libc = "0.2.171"
plist = "1.7.1"
plist_ffi = { version = "0.1.5" }
uuid = { version = "1.12", features = ["v4"], optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_Networking_WinSock"] }

[features]
aws-lc = ["idevice/aws-lc"]
ring = ["idevice/ring"]


afc = ["idevice/afc"]
amfi = ["idevice/amfi"]
core_device = ["idevice/core_device", "dep:futures", "dep:uuid"]
core_device_proxy = ["idevice/core_device_proxy"]
crashreportcopymobile = ["idevice/crashreportcopymobile"]
debug_proxy = ["idevice/debug_proxy"]
dvt = ["idevice/dvt"]
heartbeat = ["idevice/heartbeat"]
house_arrest = ["idevice/house_arrest"]
installation_proxy = ["idevice/installation_proxy"]
springboardservices = ["idevice/springboardservices"]
misagent = ["idevice/misagent"]
mobile_image_mounter = ["idevice/mobile_image_mounter"]
location_simulation = ["idevice/location_simulation"]
pair = ["idevice/pair"]
obfuscate = ["idevice/obfuscate"]
rsd = ["idevice/rsd"]
syslog_relay = ["idevice/syslog_relay"]
tcp = ["idevice/tcp"]
tunnel_tcp_stack = ["idevice/tunnel_tcp_stack"]
tss = ["idevice/tss"]
tunneld = ["idevice/tunneld"]
usbmuxd = ["idevice/usbmuxd"]
xpc = ["idevice/xpc"]
full = [
  "afc",
  "amfi",
  "core_device",
  "core_device_proxy",
  "crashreportcopymobile",
  "debug_proxy",
  "dvt",
  "heartbeat",
  "house_arrest",
  "installation_proxy",
  "misagent",
  "mobile_image_mounter",
  "pair",
  "usbmuxd",
  "xpc",
  "location_simulation",
  "rsd",
  "tcp",
  "tunnel_tcp_stack",
  "tss",
  "tunneld",
  "springboardservices",
  "syslog_relay",
]
default = ["full", "aws-lc"]

[build-dependencies]
cbindgen = "0.29.0"
ureq = "3"

[lib]
crate-type = ["staticlib", "cdylib"]
