[package]
name = "idevice-ffi"
version = "0.1.0"
edition = "2024"


[dependencies]
idevice = { path = "../idevice", default-features = false }
futures = { version = "0.3", optional = true }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = { version = "0.2" }
once_cell = "1.21.1"
tokio = { version = "1.44.1", features = ["full"] }
libc = "0.2.171"
plist = "1.7.1"
plist_ffi = { version = "0.1.6" }
uuid = { version = "1.12", features = ["v4"], optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Networking_WinSock"] }

[features]
aws-lc = ["idevice/aws-lc"]
ring = ["idevice/ring"]


afc = ["idevice/afc"]
amfi = ["idevice/amfi"]
bt_packet_logger = ["idevice/bt_packet_logger"]
companion_proxy = ["idevice/companion_proxy"]
core_device = ["idevice/core_device", "dep:futures", "dep:uuid"]
core_device_proxy = ["idevice/core_device_proxy"]
crashreportcopymobile = ["idevice/crashreportcopymobile"]
debug_proxy = ["idevice/debug_proxy"]
diagnostics_relay = ["idevice/diagnostics_relay"]
dvt = ["idevice/dvt"]
heartbeat = ["idevice/heartbeat"]
notification_proxy = ["idevice/notification_proxy"]
house_arrest = ["idevice/house_arrest"]
installcoordination_proxy = ["idevice/installcoordination_proxy"]
installation_proxy = ["idevice/installation_proxy"]
springboardservices = ["idevice/springboardservices"]
misagent = ["idevice/misagent"]
mobileactivationd = ["idevice/mobileactivationd"]
mobilebackup2 = ["idevice/mobilebackup2"]
mobile_image_mounter = ["idevice/mobile_image_mounter"]
location_simulation = ["idevice/location_simulation"]
pair = ["idevice/pair"]
pcapd = ["idevice/pcapd"]
preboard_service = ["idevice/preboard_service"]
obfuscate = ["idevice/obfuscate"]
restore_service = ["idevice/restore_service"]
rsd = ["idevice/rsd"]
syslog_relay = ["idevice/syslog_relay"]
tcp = ["idevice/tcp"]
tunnel_tcp_stack = ["idevice/tunnel_tcp_stack"]
tss = ["idevice/tss"]
tunneld = ["idevice/tunneld"]
usbmuxd = ["idevice/usbmuxd"]
xpc = ["idevice/xpc"]
screenshotr = ["idevice/screenshotr"]
full = [
  "afc",
  "amfi",
  "bt_packet_logger",
  "companion_proxy",
  "core_device",
  "core_device_proxy",
  "crashreportcopymobile",
  "debug_proxy",
  "diagnostics_relay",
  "dvt",
  "heartbeat",
  "house_arrest",
  "installcoordination_proxy",
  "installation_proxy",
  "location_simulation",
  "misagent",
  "mobileactivationd",
  "mobile_image_mounter",
  "mobilebackup2",
  "notification_proxy",
  "pair",
  "pcapd",
  "preboard_service",
  "restore_service",
  "rsd",
  "screenshotr",
  "springboardservices",
  "syslog_relay",
  "tcp",
  "tunnel_tcp_stack",
  "tss",
  "tunneld",
  "usbmuxd",
  "xpc",
]
default = ["full", "aws-lc"]

[build-dependencies]
cbindgen = "0.29.0"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
