[package]
name = "idevice-tools"
description = "Rust binary tools to interact with services on iOS devices."
authors = ["Jackson Coxson"]
version = "0.1.0"
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/idevice"
repository = "https://github.com/jkcoxson/idevice"
keywords = ["lockdownd", "ios"]

[[bin]]
name = "ideviceinfo"
path = "src/ideviceinfo.rs"

[[bin]]
name = "heartbeat_client"
path = "src/heartbeat_client.rs"

[[bin]]
name = "instproxy"
path = "src/instproxy.rs"

[[bin]]
name = "mounter"
path = "src/mounter.rs"

# [[bin]]
# name = "core_device_proxy_tun"
# path = "src/core_device_proxy_tun.rs"

[[bin]]
name = "idevice_id"
path = "src/idevice_id.rs"

[[bin]]
name = "process_control"
path = "src/process_control.rs"

[[bin]]
name = "dvt_packet_parser"
path = "src/dvt_packet_parser.rs"

[[bin]]
name = "remotexpc"
path = "src/remotexpc.rs"

[[bin]]
name = "debug_proxy"
path = "src/debug_proxy.rs"

[[bin]]
name = "misagent"
path = "src/misagent.rs"

[[bin]]
name = "location_simulation"
path = "src/location_simulation.rs"

[[bin]]
name = "afc"
path = "src/afc.rs"

[[bin]]
name = "crash_logs"
path = "src/crash_logs.rs"

[[bin]]
name = "amfi"
path = "src/amfi.rs"

[[bin]]
name = "pair"
path = "src/pair.rs"

[[bin]]
name = "syslog_relay"
path = "src/syslog_relay.rs"

[[bin]]
name = "os_trace_relay"
path = "src/os_trace_relay.rs"

[[bin]]
name = "app_service"
path = "src/app_service.rs"

[[bin]]
name = "lockdown"
path = "src/lockdown.rs"

[[bin]]
name = "restore_service"
path = "src/restore_service.rs"

[[bin]]
name = "companion_proxy"
path = "src/companion_proxy.rs"

[[bin]]
name = "diagnostics"
path = "src/diagnostics.rs"

[[bin]]
name = "mobilebackup2"
path = "src/mobilebackup2.rs"

[[bin]]
name = "diagnosticsservice"
path = "src/diagnosticsservice.rs"

[[bin]]
name = "bt_packet_logger"
path = "src/bt_packet_logger.rs"

[dependencies]
idevice = { path = "../idevice", features = ["full"], default-features = false }
tokio = { version = "1.43", features = ["full"] }
log = { version = "0.4" }
env_logger = { version = "0.11" }
# tun-rs = { version = "1.5", features = ["async"] }
sha2 = { version = "0.10" }
ureq = { version = "3" }
clap = { version = "4.5" }
plist = { version = "1.7" }
ns-keyed-archive = "0.1.2"
uuid = "1.16"
futures-util = { version = "0.3" }

[features]
default = ["aws-lc"]
aws-lc = ["idevice/aws-lc"]
ring = ["idevice/ring"]
