[package]
name = "idevice-tools"
description = "Rust binary tools to interact with services on iOS devices."
authors = ["Jackson Coxson"]
version = "0.1.52"
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/idevice"
repository = "https://github.com/jkcoxson/idevice"
keywords = ["lockdownd", "ios"]
default-run = "idevice-tools"

# [[bin]]
# name = "core_device_proxy_tun"
# path = "src/core_device_proxy_tun.rs"

[[bin]]
name = "idevice_id"
path = "src/idevice_id.rs"

[[bin]]
name = "iproxy"
path = "src/iproxy.rs"

[dependencies]
idevice = { path = "../idevice", features = ["full"], default-features = false }
tokio = { version = "1.43", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# tun-rs = { version = "1.5", features = ["async"] }
sha2 = { version = "0.10" }
ureq = { version = "3" }
clap = { version = "4.5" }
jkcli = { version = "0.1" }
plist = { version = "1.7" }
plist-macro = { version = "0.1.3" }
ns-keyed-archive = "0.1.2"
uuid = "1.16"
futures-util = { version = "0.3" }

[features]
default = ["aws-lc"]
aws-lc = ["idevice/aws-lc"]
ring = ["idevice/ring"]
openssl = ["idevice/openssl"]
